main search working

--- a/exemples/index.html
+++ b/exemples/index.html
@@ -10,7 +10,7 @@
 
   <script>
     const podcast = podcastSearch.search('nerdcast');
-    podcast.then(data => console.log(data));
+    podcast.then(result => console.log(result));
   </script>
 </body>
 </html>
