--- a/exemples/index.html
+++ b/exemples/index.html
@@ -3,55 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" type="text/css" href="index.css">
   <title>Podcast Search</title>
-  <style>
-   
-    body{
-      margin: 10px;
-      padding: 10px;
-      background-color: #c6c6c6;
-    }
-    #bd{
-      background-color: white;
-      height: 500px;
-    }
-    #infoSearch{
-      width: 500px;
-      margin: 0 auto;
-    }
-    #mainTitle{
-      padding-left: 100px;
-    }
-    #images{
-      width: 300px;
-      height: 300px;
-      display: none;
-      margin: 30px 20px;
-      float: left;
-    }
-    #imgConf{
-      width: 300px;
-      height: 300px;
-      
-    }
-    #dsplay{
-      display: none;
-      width: 800px;
-      height: 500px;
-      margin: 20px auto
-      
-    }
-    #title{
-      margin: 10px auto;
 
-    }
-  </style>
 </head>
 <body>
-  <header>
-
-  </header>
-
+  <nav id='menu'>
+    <a class='menu' href="#">Home</a>
+    <a class='menu' href="search.html">Search</a>
+    <a class='menu' href="top.html">Top</a>
+    <a class='menu' href="listTags.html">List tags</a>
+    <a class='menu' href="tagName.html">Search tag</a>
+  </nav>
   <div id="bd">
     <div id="infoSearch">
       <h1 id='mainTitle'>Search podcasts</h1>
