completed search page exemple

--- a/exemples/search.html
+++ b/exemples/search.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" type="text/css" href="index.css">
+  <link rel="stylesheet" type="text/css" href="css/search.css">
   <title>Podcast Search</title>
 
 </head>
@@ -15,6 +15,7 @@
     <a class='menu' href="listTags.html">List tags</a>
     <a class='menu' href="tagName.html">Search tag</a>
   </nav>
+  
   <div id="bd">
     <div id="infoSearch">
       <h1 id='mainTitle'>Search podcasts</h1>
