add button on top html exemple

--- a/exemples/top.html
+++ b/exemples/top.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" type="text/css" href="css/search.css">
+  <link rel="stylesheet" type="text/css" href="css/top.css">
   <title>Top podcasts</title>
 </head>
 <body>
@@ -16,7 +17,14 @@
       <a class='menu' href="tagName.html">Search tag</a>
   </nav>
   <div id="bd">
-    <input type="number" max="1000" min="1" size="20" value="10">
+    <h3>Listar</h3>
+    <button>10</button>
+    <button>20</button>
+    <button>50</button>
+    <button>100</button>
+    <button>200</button>
+    <button>500</button>
+    <button>1000</button>
   </div>
 </body>
 </html>
