--- a/exemples/tags.html
+++ b/exemples/tags.html
@@ -12,17 +12,16 @@
 </head>
 <body>
   <nav id='menu'>
-    <a class='menu' href="#">Home</a>
     <a class='menu' href="search.html">Search</a>
     <a class='menu' href="top.html">Top</a>
     <a class='menu' href="tags.html">Tags</a>
-    <a class='menu' href="tagName.html">Search tag</a>
   </nav>
   <div id="bd">
     <div id="infoSearch">
       <h1 id="mainTitle">Search tag</h1>
       <input id='srch' type="search" size='50' placeholder="Search your tag">
       <input type="button" value="Search" id='btn'>
+      <input type="button" value="List" id='btnList'>
     </div>
     <div id="rd">
       <input type="radio" name="op" value="10" checked>10
@@ -40,24 +39,41 @@
 
   <script>
     let $btn = document.getElementById("btn");
+    let $btnList = document.getElementById("btnList");
     let $srch = document.getElementById("srch");
     let $rd = document.getElementById("rd");
     let $list = document.getElementById("listPodcast");
-
+    let $radio = document.querySelector("input[name='op']:checked");
     
     $btn.addEventListener("click", () => {
       let tName = $srch.value;
+      let $radio = document.querySelector("input[name='op']:checked");
+
       //let rValue = $rd;
-      const podcastTag = podcastSearch.tagName(tName, rValue);
+      const podcastTag = podcastSearch.tagName(tName, $radio.value);
       $list.innerHTML = '';
       podcastTag.then(result => {
-        for(let i = 0; i < rValue; i++){
+        for(let i = 0; i < $radio.value; i++){
           $list.innerHTML += `<div class="img">
             <li><a href="${result[i].website}" target="_blank"><img class="topImg" src="${result[i].logo_url}"></a></li>
             </div>`;
         }
       });
     });
+    $btnList.addEventListener("click", () => {
+      let $radio = document.querySelector("input[name='op']:checked");
+      $list.innerHTML = '';
+      const podcastTag = podcastSearch.listTags($radio.value);
+      podcastTag.then(result => {
+        for(let i = 0; i < $radio.value; i++){
+          $list.innerHTML += `<li>${result[i].tag}</li>`
+        }
+
+      })
+
+
+    })
+
     
 
   </script>
